--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,10 +1,10 @@
 [bumpversion]
-current_version = v0.1.0
-parse = v(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<release>[a-z]+))?
+current_version = 0.1.0
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<release>[a-z]+))?
 commit = True
 serialize = 
-	v{major}.{minor}.{patch}-{release}
-	v{major}.{minor}.{patch}
+	{major}.{minor}.{patch}-{release}
+	{major}.{minor}.{patch}
 
 [bumpversion:part:release]
 optional_value = gamma
@@ -13,8 +13,8 @@ values =
 	gamma
 
 [bumpversion:file:sonar-project.properties]
-search = sonar.projectVersion={current_version}
-replace = sonar.projectVersion={new_version}
+search = sonar.projectVersion=v{current_version}
+replace = sonar.projectVersion=v{new_version}
 
 [bumpversion:file:package.json]
 search = "version": "{current_version}"
