--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -20,6 +20,14 @@ replace = sonar.projectVersion=v{new_version}
 search = "version": "{current_version}"
 replace = "version": "{new_version}"
 
+[bumpversion:file:package-lock.json]
+search = "version": "{current_version}"
+replace = "version": "{new_version}"
+
 [bumpversion:file:frontend/package.json]
+search = "version": "{current_version}"
+replace = "version": "{new_version}"
+
+[bumpversion:file:frontend/package-lock.json]
 search = "version": "{current_version}"
 replace = "version": "{new_version}"
