--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,10 @@ updates:
     directory: 'frontend'
     schedule:
       interval: 'weekly'
+    groups:
+      angular:
+        patterns:
+          - '@angular/*'
   - package-ecosystem: 'github-actions'
     directory: '/'
     schedule:
