Extended angular bundling pattern

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,7 @@ updates:
     groups:
       angular:
         patterns:
-          - '@angular/*'
+          - '@angular*'
   - package-ecosystem: 'github-actions'
     directory: '/'
     schedule:
