Added version info to about page

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -12,6 +12,10 @@ values =
 	beta
 	gamma
 
+[bumpversion:file:frontend/src/app/about/about.component.html]
+search = About BibTeX OSS v{current_version}
+replace = About BibTeX OSS v{new_version}
+
 [bumpversion:file:sonar-project.properties]
 search = sonar.projectVersion=v{current_version}
 replace = sonar.projectVersion=v{new_version}
