--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,6 @@ jobs:
       - name: Build and push backend Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
           push: true
           tags: |
             ghcr.io/${{ github.repository }}_backend:latest
@@ -35,7 +34,7 @@ jobs:
       - name: Build and push frontend Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./frontend
+          context: "{{defaultContext}}:frontend"
           push: true
           tags: |
             ghcr.io/${{ github.repository }}_frontend:latest
