--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "start": "node server.js"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [
     "bibtex",
@@ -24,6 +27,9 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "jest": "^29.7.0",
+    "nock": "^13.5.4",
+    "supertest": "^6.3.4"
   }
 }
