Restructured + added tests to CI

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -20,11 +20,11 @@ replace = About BibTeX OSS v{new_version}
 search = sonar.projectVersion=v{current_version}
 replace = sonar.projectVersion=v{new_version}
 
-[bumpversion:file:package.json]
+[bumpversion:file:backend/package.json]
 search = "version": "{current_version}"
 replace = "version": "{new_version}"
 
-[bumpversion:file:package-lock.json]
+[bumpversion:file:backend/package-lock.json]
 search = "version": "{current_version}"
 replace = "version": "{new_version}"
 
