--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           node-version: '20.x'
       - name: Install dependencies
-        run: npm install
+        run: cd backend && npm install
 
   build-frontend:
     runs-on: ubuntu-latest
@@ -59,13 +59,17 @@ jobs:
         run: cd frontend && npm run build
 
   check:
-    name: Check
+    name: Test & Check
     runs-on: ubuntu-latest
     permissions: read-all
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Install backend dependencies
+        run: cd backend && npm install
+      - name: Run backend tests
+        run: npm test
       - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
