--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Build and push backend Docker image
         uses: docker/build-push-action@v5
         with:
+          context: '{{defaultContext}}:backend'
           push: true
           tags: |
             ghcr.io/${{ github.repository }}_backend:latest
@@ -34,7 +35,7 @@ jobs:
       - name: Build and push frontend Docker image
         uses: docker/build-push-action@v5
         with:
-          context: "{{defaultContext}}:frontend"
+          context: '{{defaultContext}}:frontend'
           push: true
           tags: |
             ghcr.io/${{ github.repository }}_frontend:latest
