--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,4 @@ sonar.projectKey=bibtex-oss
 sonar.projectVersion=v0.2.2
 
 sonar.sources=.
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=./backend/coverage/lcov.info
