Removed coverage detection from tests

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,6 @@ sonar.projectVersion=v0.2.2
 
 sonar.sources=.
 sonar.javascript.lcov.reportPaths=./backend/coverage/lcov.info
+
 sonar.cpd.exclusions=**.test.js
+sonar.coverage.exclusions=**.test.js
