--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=bibtex-oss
 sonar.projectVersion=v0.2.2
 
 sonar.sources=.
-sonar.javascript.lcov.reportPaths=./backend/coverage/lcov.info
+sonar.javascript.lcov.reportPaths=./backend/coverage/lcov.info,./frontend/coverage/lcov.info
 
-sonar.cpd.exclusions=**.test.js
-sonar.coverage.exclusions=**.test.js
+sonar.cpd.exclusions=**.test.js,**.spec.ts
+sonar.coverage.exclusions=**.test.js,**.spec.ts
