--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --watch=false --code-coverage",
     "serve:ssr:frontend": "node dist/frontend/server/server.mjs"
   },
   "private": true,
