Removed nonsensical coverage and duplication tracking

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,5 @@ sonar.projectVersion=v0.2.2
 sonar.sources=.
 sonar.javascript.lcov.reportPaths=./backend/coverage/lcov.info,./frontend/coverage/lcov.info
 
-sonar.cpd.exclusions=**.test.js,**.spec.ts
-sonar.coverage.exclusions=**.test.js,**.spec.ts
+sonar.cpd.exclusions=**.test.js,**.spec.ts,**app.config*.ts,frontend/karma.conf.js,frontend/src/main*.ts,frontend/server.ts
+sonar.coverage.exclusions=**.test.js,**.spec.ts,**app.config*.ts,frontend/karma.conf.js,frontend/src/main*.ts,frontend/server.ts
