--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,37 +12,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.1",
-    "@angular/cdk": "^18.2.1",
-    "@angular/common": "^18.2.1",
-    "@angular/compiler": "^18.2.1",
-    "@angular/core": "^18.2.1",
-    "@angular/forms": "^18.2.1",
-    "@angular/material": "^18.2.1",
-    "@angular/platform-browser": "^18.2.1",
-    "@angular/platform-browser-dynamic": "^18.2.1",
-    "@angular/platform-server": "^18.2.1",
-    "@angular/router": "^18.2.1",
-    "@angular/ssr": "^18.2.1",
-    "express": "^4.18.2",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.6.3",
-    "zone.js": "~0.14.10"
+    "@angular/animations": "^19.0.3",
+    "@angular/cdk": "^19.0.2",
+    "@angular/common": "^19.0.3",
+    "@angular/compiler": "^19.0.3",
+    "@angular/core": "^19.0.3",
+    "@angular/forms": "^19.0.3",
+    "@angular/material": "^19.0.2",
+    "@angular/platform-browser": "^19.0.3",
+    "@angular/platform-browser-dynamic": "^19.0.3",
+    "@angular/platform-server": "^19.0.3",
+    "@angular/router": "^19.0.3",
+    "@angular/ssr": "^19.0.4",
+    "express": "^4.21.2",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.8.1",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.1",
-    "@angular/cli": "^18.2.1",
-    "@angular/compiler-cli": "^18.2.1",
-    "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
-    "@types/node": "^22.5.0",
-    "@types/prismjs": "^1.26.4",
-    "jasmine-core": "~5.2.0",
+    "@angular-devkit/build-angular": "^19.0.4",
+    "@angular/cli": "^19.0.4",
+    "@angular/compiler-cli": "^19.0.3",
+    "@types/express": "^5.0.0",
+    "@types/jasmine": "~5.1.5",
+    "@types/node": "^22.10.1",
+    "@types/prismjs": "^1.26.5",
+    "jasmine-core": "~5.5.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.5"
+    "typescript": "^5.6.3"
   }
 }
